Bug 106642 - Color UNO commands have problems on Notebookbar
Summary: Color UNO commands have problems on Notebookbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.0.0
Keywords:
: 108613 (view as bug list)
Depends on:
Blocks: Notebookbar
  Show dependency treegraph
 
Reported: 2017-03-19 12:48 UTC by andreas_k
Modified: 2018-06-20 07:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Label + Icon view (2.43 KB, image/png)
2017-03-19 12:50 UTC, andreas_k
Details
line and fill color buttons (6.71 KB, image/png)
2017-04-26 14:53 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2017-03-19 12:48:53 UTC
It would be nice if the Layout between Icon and Label + Icon would be only different from show once the label and once not.
Comment 1 andreas_k 2017-03-19 12:50:49 UTC
Created attachment 132010 [details]
Label + Icon view

When I'd like to show Label and Icon view for the two functions .uno:Color and .uno:Backcolor I get two different rectangulars with the color.

In the Icon only view the color is on bottom of the icon. Would it be possible to have this behavior. and why are the rectangulars different in wide?
Comment 2 Buovjaga 2017-03-25 18:58:35 UTC
(In reply to andreas_k from comment #1)
> Created attachment 132010 [details]
> Label + Icon view

How do I get a view like this? Is QA supposed to confirm this or will you rather just confirm with design team?
Comment 3 Yousuf Philips (jay) (retired) 2017-04-26 01:29:47 UTC
I've had similar problems with .uno:XLineColor and .uno:FillColor as GtkMenuToolButtons in sfxlo-NotebookbarToolBox available on the contextual Shape and Textbox tab of the tabbed notebookbar.
Comment 4 Yousuf Philips (jay) (retired) 2017-04-26 14:53:21 UTC
Created attachment 132866 [details]
line and fill color buttons

In addition to them appearing weird, when they are used once, the down arrow split button part is no longer accessible.
Comment 6 Commit Notification 2017-10-08 17:59:25 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0112fa78b7867f0592e3bb2fb3babd76b91594ae

tdf#106642 Wide color buttons are only for the sidebar

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2018-06-20 07:42:52 UTC
*** Bug 108613 has been marked as a duplicate of this bug. ***