tdf#106642 Wide color buttons are only for the sidebar

Change-Id: I3c75495b0f450ccf0eb8f9de715c7c7befc7bbe6